moved settings into app settings file with options model.

--- a/src/MandevilleCnc.Web/appsettings.json
+++ b/src/MandevilleCnc.Web/appsettings.json
@@ -6,5 +6,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "SendGridApiKeyEnvironmentVariableName": "SENDGRID_APIKEY",
+  "RecaptchaSiteKey": "6LfGYx8UAAAAACFWo7tFkAofnpCiaQNEq4vqgVu4",
+  "RecaptchaSecret": "6LfGYx8UAAAAAI-3Y8bzfGSBroFVfaCcSIdW77g1",
+  "EmailRecipient": "johncollinson2001@gmail.com"
 }
