--- a/src/MandevilleJoinery.Web/bundleconfig.json
+++ b/src/MandevilleJoinery.Web/bundleconfig.json
@@ -7,7 +7,7 @@
     "inputFiles": [
       "wwwroot/lib/bootstrap/dist/css/bootstrap.css",
       "wwwroot/lib/bootstrap-material-design/dist/css/bootstrap-material-design.css",
-      "wwwroot/css/lib/bootstrap-material-design/dist/css/ripples.min.css",
+      "wwwroot/css/lib/bootstrap-material-design/dist/css/ripples.css",
       "wwwroot/css/site.css"
     ]
   },
