--- a/src/MandevilleJoinery.Web/project.json
+++ b/src/MandevilleJoinery.Web/project.json
@@ -26,6 +26,7 @@
   },
 
   "tools": {
+    "BundlerMinifier.Core": "2.2.281",
     "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
   },
