--- a/src/MandevilleJoinery.Web/web.config
+++ b/src/MandevilleJoinery.Web/web.config
@@ -10,5 +10,19 @@
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified"/>
     </handlers>
     <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false"/>
+
+    <!-- Add redirect from the default Azure domain to the main .com -->
+    <rewrite>
+      <rules>
+        <rule name="Disable Azure Domain" patternSyntax="Wildcard" stopProcessing="true">
+          <match url="*" />
+          <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
+            <add input="{HTTP_HOST}" pattern="*azurewebsites.net" />
+          </conditions>
+          <action type="Redirect" url="http://mandevillejoinery.com{REQUEST_URI}" redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
+
   </system.webServer>
 </configuration>
